--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css"
     >
+
+    <link rel="icon" href="./public/vite.svg">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
